# PythonDSV

./: .flake8  .gitignore  CURSOR_SETUP.md  env.testing  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: docs.yml
data/virtuoso/database/: virtuoso-temp.db
docker-compose/: docker_utils.py  enable_virtuoso_dev_mode.py  manage.py
docker-compose/virtuoso/: README.md  docker-compose.yml  virtuoso-dev.ini  virtuoso.ini
docs/: Forms Brainstorming.md  Prompts For Kyowa.md  Useful JS.md  index.md  index.md.md
docs/.obsidian/: app.json  community-plugins.json  graph.json  workspace.json
docs/audit/: Audit Brainstorming.md  Audit Takeaways.md  Process.md
docs/audit/GEO Reach Example/: Log.md
docs/audit/Reports/: AuditReport2025-10-01.md
docs/concepts/: concepts-index.md.md
docs/implementation/: concepts-index.md.md
docs/issues/: concepts-index.md.md
docs/templates/: ResponseCreation.md  batch-generate-queries.md  compile-audit-report.md  concept-template.md  generate-med-queries.md  issue-template.md.md
docs/utilities/: copilot-system-prompt.md
examples/: directory_loader_example.py
scripts/: run_tests.py
src/: __init__.py
src/dsv_core/: __init__.py  core.py  loader.py  store.py
tests/: README.md
tests/integration/: __init__.py  test_composer_integration.py  test_directory_loader_integration.py  test_integration.py  test_projector_integration.py
tests/unit/: __init__.py  test_composer.py  test_core.py  test_directory_loader.py  test_environment.py  test_projector.py  test_virtuoso_store.py
(+97 files in other folders)
